# MachineClaw

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/output_templates/: inspect.md  prepare.md  test.md  upgrade.md
assets/prompts/: chat_system.md  inspect_user.md  prepare_user.md  system.md
scripts/: zigcc-aarch64-unknown-linux-musl.sh  zigcc-x86_64-unknown-linux-musl.sh
src/: actions.rs  ai.rs  builtin_tools.rs  cli.rs  config.rs  config_action.rs  context.rs  error.rs  i18n.rs  logging.rs  main.rs  mask.rs  mcp.rs  memory.rs  platform.rs  render.rs  shell.rs  skills.rs  snapshot.rs  task_store.rs  test_action.rs  tls.rs  tui.rs  upgrade.rs
