[package]
name = "MachineClaw"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
ctrlc = "3.5.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
once_cell = "1.21.3"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
toml = "1.0.6"
toml_edit = "0.25.4"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
wait-timeout = "0.2.1"
